2009-09-02  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/user.jl
	* lisp/sawfish/wm/commands/help.jl: replace display-url by browser
	                                    improved browser command

	* lisp/sawfish/wm/gnome/integration.jl
	* lisp/sawfish/wm/integration/gnome.jl: renamed file
	                                        correctly change of browser-command
	                                        only change browser-command if not customized
						use browser instead of display-url

	* lisp/sawfish/wm/ext/fdo-menu.jl: fixed a bug in language setting
	                                   removed obsolete code
					   trimmed down code
					   clean-up
					   -- [Matthew Love]

	* lisp/sawfish/wm/menus.jl: renamed `All Settings' menu-item to `Sawfish-UI'

2009-09-01  Christopher Bratusek <zanghar@freenet.de>
	* themes/simple/theme.jl: make windows resizable from right border

	* lisp/sawfish/wm/menus.jl: added Session sub-menu
				    move Display Errors here
				    move Restart Sawfish here
				    move Quit Sawfish here

	* lisp/sawfish/wm/help.jl: removed display-url-commands, use browser-command instead
	                           removed help-call-info-gnome

	* lisp/sawfish/wm/user.jl: don't load sawfish.wm.state.gnome

	* lisp/sawfish/wm/state/gnome.jl: removed, since we support WM_STATE_*

	* lisp/sawfish/wm/commands/gnome.jl: removed

	* lisp/sawfish/wm/autoload.jl: removed sawfish.wm.commands.gnome autoloads

	* lisp/sawfish/wm/integration.jl: use browser-program instead of display-url-command
	                                  removed some obsolete bits
					  append Logout from GNOME to Session sub-menu
					  append Shutdown from GNOME to Session sub-menu
					  updated commands for more recent GNOME versions

	* po/POTFILES.in: updated

	* OPTIONS: more updates

2009-08-31  Christopher Bratusek <zanghar@freenet.de>
	* CONTRIBUTING: Encoding is changed to utf-8 from latin-1 [Teika Kazura]
