@@ -116,6 +116,8 @@ your system, but the later doesn't
 
 @item Trimmed down GNOME Integration to the minimum [Christopher Bratusek]
 
+@item Added KDE Integration [Christopher Bratusek]
+
 @item Make sure docks/panels are unframed [Timo Korvola]
 
 @item Make sure window-type of docks/panels is dock [Timo Korvola]
