@@ -1,3 +1,12 @@
+2009-09-03  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/integration/kde.jl: initial kde integration module [incomplete atm]
+
+	* man/sawfish.texi: fixed a typo
+
+	* lisp/sawfish/wm.jl: removed deprecated command-line-arg for getting sm-id
+
+	* po/POTFILES.in: updated
+
 2009-09-02  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/commands/user.jl
 	* lisp/sawfish/wm/commands/help.jl: replace display-url by browser
